--- a/src/main/resources/views/VehiclesEdit-view.fxml
+++ b/src/main/resources/views/VehiclesEdit-view.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="277.0" layoutY="386.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="277.0" layoutY="386.0" mnemonicParsing="false" text="Zapisz" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="277.0" layoutY="29.0" prefHeight="49.0" prefWidth="166.0" text="Edytuj pojazd" />
       <VBox alignment="TOP_CENTER" layoutX="253.0" layoutY="84.0" prefHeight="302.0" prefWidth="214.0">
          <children>
@@ -56,7 +55,7 @@
             </TextField>
          </children>
       </VBox>
-      <Button layoutX="391.0" layoutY="386.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="334.0" layoutY="425.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="391.0" layoutY="386.0" mnemonicParsing="false" text="Anuluj" />
+      <Button layoutX="334.0" layoutY="425.0" mnemonicParsing="false" text="Powrót" />
    </children>
 </AnchorPane>
