--- a/src/main/resources/com/project/cwmsgradle/styles.css
+++ b/src/main/resources/com/project/cwmsgradle/styles.css
@@ -27,6 +27,7 @@
     -fx-font-size: 22px;
     -fx-font-weight: normal;
     -fx-text-fill: white;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.1), 6, 0, 0, 0);
 }
 
 #loginButton, #registerButton, #submitButton {
@@ -36,7 +37,7 @@
     -fx-border-style: none;
     -fx-background-radius: 30px;
 
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0.2, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0.2, 0, 0);
 }
 
 #loginButton:hover, #registerButton:hover, #submitButton:hover {
@@ -47,18 +48,18 @@
 #vbLogin {
     -fx-background-color: white;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0.2, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0.2, 0, 0);
 }
 
 #usernameField, #passwordField, #confirmPasswordField {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 16px;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0.2, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0.2, 0, 0);
 }
 
 #spMenu {
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0.2, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0.2, 0, 0);
 }
 
 #menuLabel {
@@ -66,20 +67,20 @@
     -fx-font-size: 32px;
     -fx-text-fill: white;
     -fx-font-weight: bold;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0.2, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0.2, 0, 0);
 }
 
-#manageClientsButton, #manageVehiclesButton, #manageRepairsButton, #exitButton, #returnButton {
+#manageClientsButton, #manageVehiclesButton, #manageRepairsButton, #exitButton, #returnButton, #usersButton {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-text-fill: black;
     -fx-background-color: white;
     -fx-border-style: none;
     -fx-background-radius: 30px;
     transition: all 0.3s ease 0s;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#manageClientsButton:hover, #manageVehiclesButton:hover, #manageRepairsButton:hover, #exitButton:hover {
+#manageClientsButton:hover, #manageVehiclesButton:hover, #manageRepairsButton:hover, #exitButton:hover, #usersButton:hover {
     -fx-background-color: #F0F0E7;
 }
 
@@ -89,10 +90,10 @@
     -fx-text-fill: white;
 }
 
-#vbAdd {
+#vbAdd, #vbClientAdd {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
 #plateLabel, #brandLabel, #modelLabel, #typeLabel, #yearLabel {
@@ -107,7 +108,7 @@
     -fx-background-color: white;
     -fx-border-style: none;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
 #saveButton:hover, #cancelButton:hover {
@@ -118,7 +119,7 @@
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 16px;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 6, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.1), 6, 0, 0, 0);
 }
 
 Label {
@@ -133,7 +134,7 @@ Label {
     -fx-background-color: white;
     -fx-border-style: none;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
 #goBackButton {
@@ -142,7 +143,7 @@ Label {
     -fx-background-color: white;
     -fx-border-style: none;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
 #addButton:hover, #editButton:hover, #deleteButton:hover, #goBackButton:hover {
@@ -156,43 +157,86 @@ Label {
 #spAnchorPaneButtons {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
 #spAPListView {
     -fx-background-color: white;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#labelMenVeh {
+#labelMenVeh, #labelClientMenage {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 18px;
     -fx-text-fill: black;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#vbMenVeh {
+#vbMenVeh, #vbClientMenage {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
 #hbMenVeh {
     -fx-background-color: white;
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#labelVehEdit{
+#labelVehEdit {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 18px;
     -fx-text-fill: black;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#vbVehEdit{
+#vbVehEdit {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
     -fx-background-radius: 30px;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 0);
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#hbCliMen {
+    -fx-background-color: white;
+    -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#labelClientAdd {
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 18px;
+    -fx-text-fill: black;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#labelName, #labelSurname, #labelPhone, #labelEmail {
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 16px;
+    -fx-text-fill: white;
+}
+
+#nameField, #surnameField, #phoneField, #mailField {
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 16px;
+    -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.1), 6, 0, 0, 0);
+}
+
+#goBackClientButton, #addClientButton, #cancelClientButton {
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-text-fill: black;
+    -fx-background-color: white;
+    -fx-border-style: none;
+    -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+
+.table-view .column-header .label {
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-text-fill: black; /* Kolor tekstu */
+    -fx-font-size: 14px; /* Rozmiar czcionki */
+    -fx-alignment: center; /* Wyrównanie tekstu */
 }
