--- a/src/main/resources/com/project/cwmsgradle/styles.css
+++ b/src/main/resources/com/project/cwmsgradle/styles.css
@@ -96,7 +96,7 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#plateLabel, #brandLabel, #modelLabel, #typeLabel, #yearLabel {
+#plateLabel, #brandLabel, #modelLabel, #yearLabel {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 16px;
     -fx-text-fill: white;
@@ -115,7 +115,7 @@
     -fx-background-color: #F0F0E7;
 }
 
-#registrationNumberField, #brandModelField, #vehicleTypeField, #productionYearField {
+#registrationNumberField, #brandField, #modelField, #productionYearField {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 16px;
     -fx-background-radius: 30px;
