--- a/src/main/resources/views/ClientMenage-view.fxml
+++ b/src/main/resources/views/ClientMenage-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.ClientMenageController">
+<AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.ClientMenageController">
     <children>
         <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="20.0" layoutY="9.0">
             <image>
@@ -31,7 +31,7 @@
                         <Insets top="30.0" />
                     </VBox.margin>
                 </Button>
-                <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#onDeleteClientButtonClick" prefHeight="35.0" prefWidth="150.0" text="Usuń klienta">
+                <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="150.0" text="Usuń klienta">
                     <VBox.margin>
                         <Insets top="30.0" />
                     </VBox.margin>
@@ -47,12 +47,11 @@
             <children>
                 <TableView fx:id="clientTableView" prefHeight="362.0" prefWidth="458.0">
                     <columns>
-                        <TableColumn fx:id="clientIdColumn" prefWidth="76" text="ID Klienta" />
-                        <TableColumn fx:id="nameColumn" prefWidth="76" text="Imie" />
-                        <TableColumn fx:id="surnameColumn" prefWidth="76" text="Nazwisko" />
-                        <TableColumn fx:id="idVehicleColumn" prefWidth="76" text="ID Pojazdu" />
-                        <TableColumn fx:id="phoneColumn" prefWidth="76" text="Nr. Telefonu" />
-                        <TableColumn fx:id="mailColumn" prefWidth="76" text="E-mail" />
+                        <TableColumn fx:id="clientIdColumn" prefWidth="91.0" text="ID Klienta" />
+                        <TableColumn fx:id="nameColumn" prefWidth="91.0" text="Imie" />
+                        <TableColumn fx:id="surnameColumn" prefWidth="91.0" text="Nazwisko" />
+                        <TableColumn fx:id="phoneColumn" prefWidth="91.0" text="Nr. Telefonu" />
+                        <TableColumn fx:id="mailColumn" prefWidth="91.0" text="E-mail" />
                     </columns>
                     <HBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
