--- a/src/main/resources/views/VehiclesAdd-view.fxml
+++ b/src/main/resources/views/VehiclesAdd-view.fxml
@@ -7,63 +7,58 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="apVehiclesAdd" prefHeight="480.0" prefWidth="720.0"
-            stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.VehicleAddController">
+<AnchorPane fx:id="apVehiclesAdd" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.VehicleAddController">
     <children>
 
-        <Button fx:id="saveButton" layoutX="236.0" layoutY="379.0" onAction="#onSaveButtonClick" prefHeight="35.0"
-                prefWidth="100.0" text="Zapisz"/>
-        <Button fx:id="cancelButton" layoutX="382.0" layoutY="379.0" onAction="#onCancelButtonClick" prefHeight="35.0"
-                prefWidth="100.0" text="Anuluj"/>
+        <Button fx:id="saveButton" layoutX="236.0" layoutY="379.0" onAction="#onSaveButtonClick" prefHeight="35.0" prefWidth="100.0" text="Zapisz" />
+        <Button fx:id="cancelButton" layoutX="382.0" layoutY="379.0" onAction="#onCancelButtonClick" prefHeight="35.0" prefWidth="100.0" text="Anuluj" />
         <VBox fx:id="vbAdd" alignment="TOP_CENTER" layoutX="237.0" layoutY="42.0" prefHeight="314.0" prefWidth="246.0">
             <children>
                 <Label fx:id="plateLabel" text="Numer rejestracyjny:">
                     <VBox.margin>
-                        <Insets top="20.0"/>
+                        <Insets top="20.0" />
                     </VBox.margin>
                 </Label>
                 <TextField fx:id="registrationNumberField" prefWidth="200.0">
                     <VBox.margin>
-                        <Insets left="10.0" right="10.0" top="10.0"/>
+                        <Insets left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
 
-                <Label fx:id="brandLabel" text="Marka i model:">
+                <Label fx:id="brandLabel" text="Marka:">
                     <VBox.margin>
-                        <Insets top="10.0"/>
+                        <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="brandModelField" prefWidth="200.0">
+                <TextField fx:id="brandField" prefWidth="200.0">
                     <VBox.margin>
-                        <Insets left="10.0" right="10.0" top="10.0"/>
+                        <Insets left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
 
-                <Label fx:id="typeLabel" text="Typ pojazdu:">
+                <Label fx:id="modelLabel" text="Model:">
                     <VBox.margin>
-                        <Insets top="10.0"/>
+                        <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="vehicleTypeField" prefWidth="200.0">
+                <TextField fx:id="modelField" prefWidth="200.0">
                     <VBox.margin>
-                        <Insets left="10.0" right="10.0" top="10.0"/>
+                        <Insets left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
 
                 <Label fx:id="yearLabel" text="Rok produkcji:">
                     <VBox.margin>
-                        <Insets top="10.0"/>
+                        <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
                 <TextField fx:id="productionYearField" prefWidth="200.0">
                     <VBox.margin>
-                        <Insets left="10.0" right="10.0" top="10.0"/>
+                        <Insets left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
             </children>
         </VBox>
-        <Button fx:id="goBackButton" onAction="#onGoBackButtonClick" layoutX="310.0" layoutY="432.0"
-                mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Powrót"/>
+        <Button fx:id="goBackButton" layoutX="310.0" layoutY="432.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="25.0" prefWidth="100.0" text="Powrót" />
     </children>
 </AnchorPane>
