--- a/src/main/resources/views/VehiclesAdd-view.fxml
+++ b/src/main/resources/views/VehiclesAdd-view.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane fx:id="apVehiclesAdd" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.VehicleAddController">
     <children>
 
@@ -57,6 +58,17 @@
                         <Insets left="10.0" right="10.0" top="7.0" />
                     </VBox.margin>
                 </TextField>
+                <!-- Add ComboBox for clients -->
+                <Label fx:id="clientLabel" text="Klient:">
+                    <VBox.margin>
+                        <Insets top="7.0" />
+                    </VBox.margin>
+                </Label>
+                <ComboBox fx:id="clientComboBox" prefWidth="200.0">
+                    <VBox.margin>
+                        <Insets left="10.0" right="10.0" top="7.0" />
+                    </VBox.margin>
+                </ComboBox>
             </children>
         </VBox>
         <Button fx:id="goBackButton" layoutX="310.0" layoutY="432.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="25.0" prefWidth="100.0" text="Powrót" />
