--- a/src/main/resources/com/project/cwmsgradle/styles.css
+++ b/src/main/resources/com/project/cwmsgradle/styles.css
@@ -4,13 +4,19 @@
     font-size: 14px;
 }
 
-
 #main {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
 }
 
 #apMain {
-    -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
+    -fx-background-color: #0079fa;
+    -fx-background-image: url('https://www.transparenttextures.com/patterns/polonez-pattern.png');
+}
+
+#vbMainApp {
+    -fx-background-color: white;
+    -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
 #apVehiclesAdd {
@@ -21,8 +27,13 @@
     -fx-background-color: white;
     -fx-background-radius: 30px;
 }
+#appLabel{
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 22px;
+    -fx-text-fill: black;
+}
 
-#appLabel, #loginLabel, #registerLabel {
+#loginLabel, #registerLabel {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 22px;
     -fx-font-weight: normal;
@@ -80,7 +91,8 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#manageClientsButton:hover, #manageVehiclesButton:hover, #manageRepairsButton:hover, #exitButton:hover, #usersButton:hover {
+#manageClientsButton:hover, #manageVehiclesButton:hover, #manageRepairsButton:hover,
+#exitButton:hover, #usersButton:hover {
     -fx-background-color: #F0F0E7;
 }
 
@@ -102,7 +114,7 @@
     -fx-text-fill: white;
 }
 
-#clientComboBox{
+#clientComboBox {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-font-size: 16px;
     -fx-background-radius: 30px;
@@ -186,7 +198,7 @@ Label {
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
 
-#hbMenVeh, #hbClientMenage, #hbAppointment {
+#hbMenVeh, #hbCliMen, #hbAppointment {
     -fx-background-color: white;
     -fx-background-radius: 30px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
@@ -226,7 +238,8 @@ Label {
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.1), 6, 0, 0, 0);
 }
 
-#goBackClientButton, #addClientButton, #cancelClientButton, #addAppointmentButton, #editAppointmentButton, #endAppointmentButton {
+#goBackClientButton, #addClientButton, #cancelClientButton, #addAppointmentButton,
+#editAppointmentButton, #endAppointmentButton {
     -fx-font-family: 'Ubuntu', sans-serif;
     -fx-text-fill: black;
     -fx-background-color: white;
@@ -241,4 +254,24 @@ Label {
     -fx-text-fill: black; /* Kolor tekstu */
     -fx-font-size: 14px; /* Rozmiar czcionki */
     -fx-alignment: center; /* Wyrównanie tekstu */
+}
+
+#usernameLabel{
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 18px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0.2, 0, 0);
+
+}
+#usernameLabelClient{
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 18px;
+    -fx-text-fill: black;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#usernameLabelVehicle{
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 18px;
+    -fx-text-fill: black;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
 }
