--- a/src/main/resources/views/MainApp-view.fxml
+++ b/src/main/resources/views/MainApp-view.fxml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="apMain" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css"
-            xmlns="http://javafx.com/javafx/21.0.0" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.project.cwmsgradle.controlls.mainAppController">
+<AnchorPane fx:id="apMain" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.mainAppController">
     <children>
-        <Label fx:id="appLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="105.0" layoutY="89.0"
-               prefHeight="47.0" prefWidth="534.0" text="System Zarządzania Warsztatem Samochodowym"
-               textAlignment="JUSTIFY">
-            <font>
-                <Font size="22.0"/>
-            </font>
-        </Label>
-        <Button fx:id="loginButton" onAction="#onLoginButtonClick" layoutX="297.0" layoutY="240.0" prefHeight="45.0"
-                prefWidth="150.0" text="Zaloguj"/>
-        <Button fx:id="registerButton" onAction="#onRegisterButtonClick" layoutX="297.0" layoutY="312.0"
-                prefHeight="45.0" prefWidth="150.0"
-                stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarejestruj"/>
+      <VBox fx:id="vbMainApp" alignment="CENTER" layoutX="188.0" layoutY="56.0" prefHeight="368.0" prefWidth="344.0">
+         <children>
+              <Label fx:id="appLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="98.0" prefWidth="308.0" text="System Zarządzania Warsztatem Samochodowym" textAlignment="CENTER" wrapText="true">
+                  <font>
+                      <Font size="22.0" />
+                  </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+              </Label>
+              <Button fx:id="loginButton" alignment="CENTER" onAction="#onLoginButtonClick" prefHeight="45.0" prefWidth="150.0" text="Zaloguj">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Button>
+              <Button fx:id="registerButton" onAction="#onRegisterButtonClick" prefHeight="45.0" prefWidth="150.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarejestruj" />
+         </children>
+      </VBox>
     </children>
 </AnchorPane>
