--- a/src/main/resources/views/VehiclesAdd-view.fxml
+++ b/src/main/resources/views/VehiclesAdd-view.fxml
@@ -2,18 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.ComboBox?>
 <AnchorPane fx:id="apVehiclesAdd" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.VehicleAddController">
     <children>
 
-        <Button fx:id="saveButton" layoutX="237.0" layoutY="386.0" onAction="#onSaveButtonClick" prefHeight="35.0" prefWidth="100.0" text="Zapisz" />
-        <Button fx:id="cancelButton" layoutX="383.0" layoutY="386.0" onAction="#onCancelButtonClick" prefHeight="35.0" prefWidth="100.0" text="Anuluj" />
-        <VBox fx:id="vbAdd" alignment="TOP_CENTER" layoutX="237.0" layoutY="20.0" prefHeight="358.0" prefWidth="246.0">
+        <Button fx:id="saveButton" layoutX="237.0" layoutY="414.0" onAction="#onSaveButtonClick" prefHeight="35.0" prefWidth="100.0" text="Zapisz" />
+        <VBox fx:id="vbAdd" alignment="TOP_CENTER" layoutX="237.0" layoutY="30.0" prefHeight="358.0" prefWidth="246.0">
             <children>
                 <Label fx:id="plateLabel" text="Numer rejestracyjny:">
                     <VBox.margin>
@@ -64,13 +63,13 @@
                         <Insets top="7.0" />
                     </VBox.margin>
                 </Label>
-                <ComboBox fx:id="clientComboBox" prefWidth="200.0">
+                <ComboBox fx:id="clientComboBox" prefWidth="225.0">
                     <VBox.margin>
-                        <Insets left="10.0" right="10.0" top="7.0" />
+                        <Insets top="7.0" />
                     </VBox.margin>
                 </ComboBox>
             </children>
         </VBox>
-        <Button fx:id="goBackButton" layoutX="310.0" layoutY="432.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="25.0" prefWidth="100.0" text="Powrót" />
+        <Button fx:id="goBackButton" layoutX="383.0" layoutY="413.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="35.0" prefWidth="100.0" text="Powrót" />
     </children>
 </AnchorPane>
