--- a/src/main/resources/views/LoginDialog-view.fxml
+++ b/src/main/resources/views/LoginDialog-view.fxml
@@ -13,31 +13,31 @@
 
 <AnchorPane fx:id="apMain" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.LoginDialogController">
     <children>
-        <Label fx:id="loginLabel" alignment="CENTER" layoutX="277.0" layoutY="46.0" prefHeight="46.0" prefWidth="166.0" text="Zaloguj się" underline="true">
+        <Label fx:id="loginLabel" alignment="CENTER" layoutX="277.0" layoutY="46.0" prefHeight="46.0" prefWidth="166.0" text="Zaloguj się">
             <font>
                 <Font size="24.0" />
             </font>
         </Label>
-        <VBox fx:id="vbLogin" alignment="TOP_CENTER" layoutX="239.0" layoutY="105.0" prefHeight="270.0" prefWidth="243.0">
+        <VBox fx:id="vbLogin" alignment="TOP_CENTER" layoutX="239.0" layoutY="105.0" prefHeight="301.0" prefWidth="243.0">
             <children>
                 <TextField fx:id="usernameField" prefHeight="30.0" prefWidth="189.0" promptText="Podaj login">
                     <VBox.margin>
-                        <Insets left="10.0" right="10.0" top="20.0" />
+                        <Insets left="15.0" right="15.0" top="30.0" />
                     </VBox.margin>
                 </TextField>
                 <PasswordField fx:id="passwordField" prefWidth="100.0" promptText="Podaj hasło">
                     <VBox.margin>
-                        <Insets left="10.0" right="10.0" top="20.0" />
+                        <Insets left="15.0" right="15.0" top="20.0" />
                     </VBox.margin>
                 </PasswordField>
-            <Label fx:id="messageLabel" alignment="CENTER" wrapText="true">
+            <Label fx:id="messageLabel" alignment="CENTER" prefHeight="98.0" prefWidth="191.0" textAlignment="CENTER" wrapText="true">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </Label>
-                <Button fx:id="submitButton" onAction="#onSubmitButtonClick" prefHeight="45.0" prefWidth="150.0" text="Zaloguj">
+                <Button fx:id="submitButton" onAction="#onSubmitButtonClick" prefHeight="39.0" prefWidth="150.0" text="Zaloguj">
                     <VBox.margin>
-                        <Insets bottom="20.0" top="55.0" />
+                        <Insets bottom="20.0" top="25.0" />
                     </VBox.margin>
                 </Button>
             </children>
@@ -47,6 +47,6 @@
                 <Image url="@../icons/login.png" />
             </image>
         </ImageView>
-      <Button fx:id="returnButton" layoutX="332.0" layoutY="403.0" mnemonicParsing="false" onAction="#onReturnButtonClick" text="Powrót" />
+      <Button fx:id="returnButton" layoutX="311.0" layoutY="423.0" mnemonicParsing="false" onAction="#onReturnButtonClick" prefWidth="100.0" text="Powrót" />
     </children>
 </AnchorPane>
