--- a/src/main/resources/views/AppointmentMenage-view.fxml
+++ b/src/main/resources/views/AppointmentMenage-view.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.AppointmentMenageView">
    <children>
+      <Label fx:id="usernameLabelAppointments" layoutX="594.0" layoutY="30.0" prefHeight="23.0" prefWidth="100.0" text="Label" />
       <Label fx:id="appointmentLabel" alignment="CENTER" layoutX="44.0" layoutY="25.0" prefHeight="34.0" prefWidth="179.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarządzaj zleceniami" />
       <VBox fx:id="vbAppointment" alignment="TOP_CENTER" layoutX="26.0" layoutY="140.0" prefHeight="384.0" prefWidth="167.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="533.0">
          <opaqueInsets>
@@ -46,5 +46,10 @@
          </image>
       </ImageView>
       <HBox fx:id="hbAppointment" layoutX="198.0" layoutY="66.0" prefHeight="384.0" prefWidth="500.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+      <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="565.0" layoutY="31.0">
+         <image>
+            <Image url="@../icons/user.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
