--- a/src/main/resources/views/MainApp-view.fxml
+++ b/src/main/resources/views/MainApp-view.fxml
@@ -2,26 +2,26 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="apMain" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.mainAppController">
     <children>
       <VBox fx:id="vbMainApp" alignment="CENTER" layoutX="188.0" layoutY="56.0" prefHeight="368.0" prefWidth="344.0">
          <children>
-              <Label fx:id="appLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="98.0" prefWidth="308.0" text="System Zarządzania Warsztatem Samochodowym" textAlignment="CENTER" wrapText="true">
-                  <font>
-                      <Font size="22.0" />
-                  </font>
+            <ImageView fitHeight="188.0" fitWidth="284.0">
+               <image>
+                  <Image url="@../icons/logo.png" />
+               </image>
                <VBox.margin>
-                  <Insets bottom="10.0" />
+                  <Insets top="-15.0" />
                </VBox.margin>
-              </Label>
+            </ImageView>
               <Button fx:id="loginButton" alignment="CENTER" onAction="#onLoginButtonClick" prefHeight="45.0" prefWidth="150.0" text="Zaloguj">
                <VBox.margin>
-                  <Insets bottom="20.0" />
+                  <Insets bottom="20.0" top="5.0" />
                </VBox.margin>
             </Button>
               <Button fx:id="registerButton" onAction="#onRegisterButtonClick" prefHeight="45.0" prefWidth="150.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Zarejestruj" />
