dodanie zmiany hasła

--- a/src/main/resources/com/project/cwmsgradle/styles.css
+++ b/src/main/resources/com/project/cwmsgradle/styles.css
@@ -307,3 +307,41 @@ Label {
 #changePasswordButton:hover, #deleteUserButton:hover {
     -fx-background-color: #F0F0E7;
 }
+
+#apUsersEdit{
+    -fx-background-color: white;
+    -fx-background-image: url('https://www.transparenttextures.com/patterns/polonez-pattern.png');
+}
+
+#vbUsersEdit{
+    -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #2A54D2, #6BA0FF);
+    -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#passwordEditLabel {
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 18px;
+    -fx-text-fill: white;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#usersEditTextField{
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-font-size: 16px;
+    -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.1), 6, 0, 0, 0);
+}
+
+#passwordEditButton{
+    -fx-font-family: 'Ubuntu', sans-serif;
+    -fx-text-fill: black;
+    -fx-background-color: white;
+    -fx-border-style: none;
+    -fx-background-radius: 30px;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 10, 0, 0, 0);
+}
+
+#passwordEditButton:hover {
+    -fx-background-color: #F0F0E7;
+}
