--- a/src/main/resources/views/UsersMenage-view.fxml
+++ b/src/main/resources/views/UsersMenage-view.fxml
@@ -16,7 +16,7 @@
       <Label fx:id="usernameLabelUsers" layoutX="607.0" layoutY="32.0" prefHeight="32.0" prefWidth="113.0" />
       <VBox fx:id="vbUsers" alignment="TOP_CENTER" layoutX="62.0" layoutY="140.0" prefHeight="369.0" prefWidth="150.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="20.0">
          <children>
-            <Button fx:id="changePasswordButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="125.0" text="Zmiana hasła">
+            <Button fx:id="changePasswordButton" onAction="#onEditPasswordButtonClick" mnemonicParsing="false" prefHeight="35.0" prefWidth="125.0" text="Zmiana hasła">
                <VBox.margin>
                   <Insets top="50.0" />
                </VBox.margin>
