--- a/src/main/resources/views/ClientEdit-view.fxml
+++ b/src/main/resources/views/ClientEdit-view.fxml
@@ -7,65 +7,55 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.ClientEditController">
+<AnchorPane fx:id="apClientEdit" prefHeight="480.0" prefWidth="720.0" stylesheets="@../com/project/cwmsgradle/styles.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.cwmsgradle.controlls.ClientEditController">
     <children>
-        <Label fx:id="labelClientAdd" alignment="CENTER" contentDisplay="CENTER" layoutX="290.0" layoutY="14.0"
-               prefHeight="49.0" prefWidth="141.0" stylesheets="@../com/project/cwmsgradle/styles.css"
-               text="Edytuj Klienta" underline="true"/>
-        <VBox fx:id="vbClientAdd" alignment="TOP_CENTER" layoutX="58.0" layoutY="74.0" prefHeight="314.0"
-              prefWidth="590.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.leftAnchor="100.0"
-              AnchorPane.rightAnchor="100.0">
+        <Label fx:id="labelClientAdd" alignment="CENTER" contentDisplay="CENTER" layoutX="290.0" layoutY="14.0" prefHeight="49.0" prefWidth="141.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Edytuj Klienta" />
+        <VBox fx:id="vbClientAdd" alignment="TOP_CENTER" layoutX="210.0" layoutY="63.0" prefHeight="320.0" prefWidth="300.0" stylesheets="@../com/project/cwmsgradle/styles.css" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="210.0">
             <children>
                 <Label fx:id="labelName" text="Imie">
                     <VBox.margin>
-                        <Insets top="20.0"/>
+                        <Insets top="20.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="nameField">
+                <TextField fx:id="nameField" promptText="Imie">
                     <VBox.margin>
-                        <Insets left="100.0" right="100.0" top="10.0"/>
+                        <Insets left="20.0" right="20.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
                 <Label fx:id="labelSurname" text="Nazwisko">
                     <VBox.margin>
-                        <Insets top="10.0"/>
+                        <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="surnameField">
+                <TextField fx:id="surnameField" promptText="Nazwisko">
                     <VBox.margin>
-                        <Insets left="100.0" right="100.0" top="10.0"/>
+                        <Insets left="20.0" right="20.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
                 <Label fx:id="labelPhone" text="Nr. Telefonu">
                     <VBox.margin>
-                        <Insets top="10.0"/>
+                        <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="phoneField">
+                <TextField fx:id="phoneField" promptText="Nr. Telefonu">
                     <VBox.margin>
-                        <Insets left="100.0" right="100.0" top="10.0"/>
+                        <Insets left="20.0" right="20.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
                 <Label fx:id="labelMail" text="E-mail">
                     <VBox.margin>
-                        <Insets top="10.0"/>
+                        <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="mailField">
+                <TextField fx:id="mailField" promptText="E-mail">
                     <VBox.margin>
-                        <Insets left="100.0" right="100.0" top="10.0"/>
+                        <Insets left="20.0" right="20.0" top="10.0" />
                     </VBox.margin>
                 </TextField>
             </children>
         </VBox>
-        <Button fx:id="goBackClientButton" onAction="#onGoBackButtonClick" layoutX="332.0" layoutY="441.0" mnemonicParsing="false" prefHeight="25.0"
-                prefWidth="57.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Powrót"/>
-        <Button fx:id="cancelClientButton" onAction="#onCancelButtonClick" layoutX="381.0" layoutY="400.0" mnemonicParsing="false" prefHeight="30.0"
-                prefWidth="100.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Anuluj"/>
-        <Button fx:id="addClientButton" onAction="#onSaveButtonClick" layoutX="240.0" layoutY="400.0"
-                mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0"
-                stylesheets="@../com/project/cwmsgradle/styles.css" text="Edytuj"/>
+        <Button fx:id="goBackClientButton" layoutX="332.0" layoutY="441.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" prefHeight="25.0" prefWidth="57.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Powrót" />
+        <Button fx:id="cancelClientButton" layoutX="381.0" layoutY="400.0" mnemonicParsing="false" onAction="#onCancelButtonClick" prefHeight="30.0" prefWidth="100.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Anuluj" />
+        <Button fx:id="addClientButton" layoutX="240.0" layoutY="400.0" mnemonicParsing="false" onAction="#onSaveButtonClick" prefHeight="30.0" prefWidth="100.0" stylesheets="@../com/project/cwmsgradle/styles.css" text="Edytuj" />
     </children>
 </AnchorPane>
