--- a/src/main/resources/views/UsersPasswordEdit-view.fxml
+++ b/src/main/resources/views/UsersPasswordEdit-view.fxml
@@ -17,7 +17,7 @@
                   <Insets top="40.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="usersEditTextField" prefHeight="26.0">
+            <TextField fx:id="usersEditTextField" prefHeight="26.0" promptText="Nowe hasło">
                <VBox.margin>
                   <Insets left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
