--- a/src/main/resources/views/VehiclesEdit-view.fxml
+++ b/src/main/resources/views/VehiclesEdit-view.fxml
@@ -20,7 +20,7 @@
                         <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="registrationNumberField">
+                <TextField fx:id="registrationNumberField" promptText="Numer rejestracyjny">
                     <VBox.margin>
                         <Insets left="10.0" right="10.0" top="7.0" />
                     </VBox.margin>
@@ -30,7 +30,7 @@
                         <Insets top="7.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="brandField">
+                <TextField fx:id="brandField" promptText="Marka">
                     <VBox.margin>
                         <Insets left="10.0" right="10.0" top="7.0" />
                     </VBox.margin>
@@ -40,7 +40,7 @@
                         <Insets top="10.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="modelField">
+                <TextField fx:id="modelField" promptText="Model">
                     <VBox.margin>
                         <Insets left="10.0" right="10.0" top="7.0" />
                     </VBox.margin>
@@ -50,7 +50,7 @@
                         <Insets top="7.0" />
                     </VBox.margin>
                 </Label>
-                <TextField fx:id="productionYearField">
+                <TextField fx:id="productionYearField" promptText="Rok produkcji">
                     <VBox.margin>
                         <Insets left="10.0" right="10.0" top="7.0" />
                     </VBox.margin>
